[package]
name = "rlox"
version = "0.1.0"
authors = ["Sindre Ilebekk Johansen <sindre@sindrejohansen.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
num_enum = "0.5.1"
pretty_env_logger = "0.4.0"
log = "0.4.11"
