[package]
name = "rlox"
version = "0.1.0"
authors = ["Sindre Ilebekk Johansen <sindre@sindrejohansen.no>"]
edition = "2018"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
num_enum = "0.5.1"
pretty_env_logger = "0.4.0"
log = "0.4.11"
parking_lot = "0.11.0"

[features]
# no features by default
default = []

# Add feature "foo" here, then you can use it. 
# Our "foo" feature depends on nothing else.
print-code = []
trace-execution = []
